# nvim-config

./: .gitignore  AGENTS.md  LSP_ARCHITECTURE.md  LSP_MIGRATION_COMPLETE.md  README.md  init.lua
after/ftplugin/: python.lua
after/lsp/: angularls.lua  bashls.lua  cssls.lua  dockerls.lua  emmet_ls.lua  eslint.lua  glsl_analyzer.lua  gopls.lua  graphql.lua  html.lua  jsonls.lua  lua_ls.lua  marksman.lua  prismals.lua  pyright.lua  ruff.lua  rust_analyzer.lua  svelte.lua  tailwindcss.lua  terraformls.lua  ts_ls.lua  wgsl_analyzer.lua
backup/newfile/: lsp.lua
docs/: http-testing.md
ftdetect/: glsl.lua  wgsl.lua
ftplugin/: glsl.lua  wgsl.lua
lua/cybercat/: cmp_glsl_struct.lua  health.lua  lazy.lua  lsp.lua
lua/cybercat/core/: active-colorscheme.sh  autocmds.lua  claude-socket.lua  colors.lua  command.lua  filetype.lua  highlights.lua  init.lua  keymaps.lua  keymapsPlugin.lua  lowPower10s.lua  options.lua  options2.lua
lua/cybercat/cybercat-app/: init.lua
lua/cybercat/modules/: mini-files-git.lua  mini-files-km.lua
lua/cybercat/plugins/: ai-claude.lua  ai.lua  auto-save.lua  auto-session.lua  codecompanion.lua  codeium_chat.lua  colorscheme.lua  conform.lua  copilot-chat.lua  dadbob-ui.lua  debug.lua  debug2.lua  disabled.lua  distant-portal.lua  engram.lua  flash.lua  formatting.lua  git-conflict.lua  gitsigns.lua  hurl.lua  illuminate.lua  image.lua  img-clip.lua  init.lua  kubectl.lua  lazygit.lua  linting.lua  (+30 more)
lua/luasnip/: rest.lua
queries/typescript/: injections.scm
snippets/: README.md  example.http  glsl-library.json  glsl-structs.json  http.json  http.lua  hurl.json  package.json  wgsl.json
spell/: en.utf-8.add
templates/: plugin-keymaps.lua  plugin-simple.lua  plugin-template.lua  pyproject.toml
(+124 files in other folders)
